// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterNetwork > should render empty 1`] = `
<div>
  <div
    data-testid="FilterNetwork"
  >
    <ul
      class="flex flex-wrap"
      data-testid="NetworkOptions"
    />
  </div>
</div>
`;

exports[`FilterNetwork > should render public networks 1`] = `
<div>
  <div
    data-testid="FilterNetwork"
  >
    <ul
      class="flex flex-wrap"
      data-testid="NetworkOptions"
    >
      <li
        class="inline-block cursor-pointer pb-4 pr-4"
        data-testid="NetworkOption__ark.mainnet"
      >
        <div
          class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
        >
          <div
            aria-label="ARK"
            class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
            data-testid="NetworkIcon-ARK-ark.mainnet"
          >
            <div
              class="text-theme-secondary-300"
              data-testid="NetworkIcon__icon"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="ark"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <span
            class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <span />
          </span>
        </div>
      </li>
      <li
        class="inline-block cursor-pointer pb-4 pr-4"
        data-testid="NetworkOption__ark.devnet"
      >
        <div
          class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
        >
          <div
            aria-label="ARK Devnet"
            class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="text-theme-secondary-300"
              data-testid="NetworkIcon__icon"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="ark"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <span
            class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <span />
          </span>
        </div>
      </li>
      <li
        class="inline-block cursor-pointer pb-4 pr-4"
        data-testid="NetworkOption__mainsail.mainnet"
      >
        <div
          class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
        >
          <div
            aria-label="Mainsail"
            class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
            data-testid="NetworkIcon-Mainsail-mainsail.mainnet"
          >
            <div
              class="text-theme-secondary-300"
              data-testid="NetworkIcon__icon"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="ark"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <span
            class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <span />
          </span>
        </div>
      </li>
      <li
        class="inline-block cursor-pointer pb-4 pr-4"
        data-testid="NetworkOption__mainsail.devnet"
      >
        <div
          class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
        >
          <div
            aria-label="Mainsail Devnet"
            class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
            data-testid="NetworkIcon-Mainsail-mainsail.devnet"
          >
            <div
              class="text-theme-secondary-300"
              data-testid="NetworkIcon__icon"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="ark"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <span
            class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <span />
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`FilterNetworks > should render empty 1`] = `
<div>
  <div
    class="space-y-2"
  />
</div>
`;

exports[`FilterNetworks > should render public and testnet networks 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-semibold text-theme-secondary-700"
      >
        Public Networks
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__ark.mainnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__mainsail.mainnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="Mainsail"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-Mainsail-mainsail.mainnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-semibold text-theme-secondary-700"
      >
        Development Networks
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__ark.devnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="ARK Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__mainsail.devnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="Mainsail Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-Mainsail-mainsail.devnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FilterNetworks > should toggle a testnet network option 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-semibold text-theme-secondary-700"
      >
        Public Networks
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__ark.mainnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-primary-500 ring-theme-background duration-100"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="text-theme-primary-500"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 align-middle border-transparent bg-theme-primary-500 text-theme-primary-100"
            >
              <div>
                <div
                  style="height: 10px; width: 10px;"
                >
                  <svg
                    id="check-mark-small"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__mainsail.mainnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="Mainsail"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-Mainsail-mainsail.mainnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-semibold text-theme-secondary-700"
      >
        Development Networks
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__ark.devnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="ARK Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__mainsail.devnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="Mainsail Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-Mainsail-mainsail.devnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FilterNetworks > should toggle view all 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-semibold text-theme-secondary-700"
      >
        Public Networks
      </div>
      <div
        class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background duration-100"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-700"
        >
          All
        </div>
        <span
          class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 align-middle border-theme-primary-700 bg-theme-primary-700 text-white"
        >
          <div
            class="transition-transform rotate-180"
          >
            <div
              style="height: 10px; width: 10px;"
            >
              <svg
                id="chevron-down-small"
                style="height: 100%; width: 100%;"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__ark.mainnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__ark.mainnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__mainsail.mainnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="Mainsail"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-Mainsail-mainsail.mainnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
      <label
        class="mt-4 inline-flex cursor-pointer items-center space-x-3 text-theme-secondary-text"
      >
        <input
          class="custom-checkbox !h-5 !w-5 cursor-pointer !rounded !border-2 transition duration-150 ease-in-out focus:!ring-theme-primary-400 focus:!ring-offset-0 disabled:cursor-not-allowed disabled:border-theme-secondary-300 disabled:bg-theme-secondary-200 disabled:dark:border-theme-dark-600 disabled:dark:bg-theme-dark-800 [&:not(:checked)]:border-theme-secondary-300 [&:not(:checked)]:!bg-transparent [&:not(:checked)]:dark:border-theme-dark-600 checked:text-theme-primary-600 checked:hover:text-theme-primary-700 [&:not(:checked)]:hover:border-theme-primary-600"
          data-testid="FilterNetwork__select-all-checkbox"
          type="checkbox"
        />
        <span>
          Select All
        </span>
      </label>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-semibold text-theme-secondary-700"
      >
        Development Networks
      </div>
      <div
        class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background duration-100"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-700"
        >
          All
        </div>
        <span
          class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-primary-100 text-theme-primary-700 dark:border-theme-secondary-800"
        >
          <div
            class="transition-transform"
          >
            <div
              style="height: 10px; width: 10px;"
            >
              <svg
                id="chevron-down-small"
                style="height: 100%; width: 100%;"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__ark.devnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="ARK Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__mainsail.devnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="Mainsail Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-Mainsail-mainsail.devnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FilterNetworks > should toggle view all 2`] = `
<div>
  <div
    class="space-y-2"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-semibold text-theme-secondary-700"
      >
        Public Networks
      </div>
      <div
        class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background duration-100"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-700"
        >
          All
        </div>
        <span
          class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-primary-100 text-theme-primary-700 dark:border-theme-secondary-800"
        >
          <div
            class="transition-transform"
          >
            <div
              style="height: 10px; width: 10px;"
            >
              <svg
                id="chevron-down-small"
                style="height: 100%; width: 100%;"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__ark.mainnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__ark.mainnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__mainsail.mainnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="Mainsail"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-Mainsail-mainsail.mainnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-semibold text-theme-secondary-700"
      >
        Development Networks
      </div>
      <div
        class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background duration-100"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-700"
        >
          All
        </div>
        <span
          class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-primary-100 text-theme-primary-700 dark:border-theme-secondary-800"
        >
          <div
            class="transition-transform"
          >
            <div
              style="height: 10px; width: 10px;"
            >
              <svg
                id="chevron-down-small"
                style="height: 100%; width: 100%;"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__ark.devnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="ARK Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer pb-4 pr-4"
          data-testid="NetworkOption__mainsail.devnet"
        >
          <div
            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
          >
            <div
              aria-label="Mainsail Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-Mainsail-mainsail.devnet"
            >
              <div
                class="text-theme-secondary-300"
                data-testid="NetworkIcon__icon"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="ark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`NetworkOptions > should render available networks options 1`] = `
<div>
  <ul
    class="flex flex-wrap"
    data-testid="NetworkOptions"
  >
    <li
      class="inline-block cursor-pointer pb-4 pr-4"
      data-testid="NetworkOption__ark.mainnet"
    >
      <div
        class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
      >
        <div
          aria-label="ARK"
          class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
          data-testid="NetworkIcon-ARK-ark.mainnet"
        >
          <div
            class="text-theme-secondary-300"
            data-testid="NetworkIcon__icon"
          >
            <div
              style="height: 20px; width: 20px;"
            >
              <svg
                id="ark"
                style="height: 100%; width: 100%;"
                viewBox="0 0 36.3 30.6"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <span
          class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block cursor-pointer pb-4 pr-4"
      data-testid="NetworkOption__ark.devnet"
    >
      <div
        class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
      >
        <div
          aria-label="ARK Devnet"
          class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
          data-testid="NetworkIcon-ARK-ark.devnet"
        >
          <div
            class="text-theme-secondary-300"
            data-testid="NetworkIcon__icon"
          >
            <div
              style="height: 20px; width: 20px;"
            >
              <svg
                id="ark"
                style="height: 100%; width: 100%;"
                viewBox="0 0 36.3 30.6"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <span
          class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block cursor-pointer pb-4 pr-4"
      data-testid="NetworkOption__mainsail.mainnet"
    >
      <div
        class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
      >
        <div
          aria-label="Mainsail"
          class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
          data-testid="NetworkIcon-Mainsail-mainsail.mainnet"
        >
          <div
            class="text-theme-secondary-300"
            data-testid="NetworkIcon__icon"
          >
            <div
              style="height: 20px; width: 20px;"
            >
              <svg
                id="ark"
                style="height: 100%; width: 100%;"
                viewBox="0 0 36.3 30.6"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <span
          class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block cursor-pointer pb-4 pr-4"
      data-testid="NetworkOption__mainsail.devnet"
    >
      <div
        class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100"
      >
        <div
          aria-label="Mainsail Devnet"
          class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
          data-testid="NetworkIcon-Mainsail-mainsail.devnet"
        >
          <div
            class="text-theme-secondary-300"
            data-testid="NetworkIcon__icon"
          >
            <div
              style="height: 20px; width: 20px;"
            >
              <svg
                id="ark"
                style="height: 100%; width: 100%;"
                viewBox="0 0 36.3 30.6"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <span
          class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <span />
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`NetworkOptions > should render empty 1`] = `
<div>
  <ul
    class="flex flex-wrap"
    data-testid="NetworkOptions"
  />
</div>
`;

exports[`ToggleAllOption > should render 1`] = `
<div>
  <div
    class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background duration-100"
    data-testid="network__viewall"
  >
    <div
      class="text-sm font-semibold text-theme-primary-700"
    >
      All
    </div>
    <span
      class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-primary-100 text-theme-primary-700 dark:border-theme-secondary-800"
    >
      <div
        class="transition-transform"
      >
        <div
          style="height: 10px; width: 10px;"
        >
          <svg
            id="chevron-down-small"
            style="height: 100%; width: 100%;"
            viewBox="0 0 10 10"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
      <span />
    </span>
  </div>
</div>
`;

exports[`ToggleAllOption > should render hidden 1`] = `<div />`;

exports[`ToggleAllOption > should render selected 1`] = `
<div>
  <div
    class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background duration-100"
    data-testid="network__viewall"
  >
    <div
      class="text-sm font-semibold text-theme-primary-700"
    >
      All
    </div>
    <span
      class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 align-middle border-theme-primary-700 bg-theme-primary-700 text-white"
    >
      <div
        class="transition-transform rotate-180"
      >
        <div
          style="height: 10px; width: 10px;"
        >
          <svg
            id="chevron-down-small"
            style="height: 100%; width: 100%;"
            viewBox="0 0 10 10"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
      <span />
    </span>
  </div>
</div>
`;
